
    - InstanceState object now removes circular references to itself
      upon disposal to keep it outside of cyclic garbage collection.

- sql
    - Simplified the check for ResultProxy "autoclose without results"
      to be based solely on presence of cursor.description.   
      All the regexp-based guessing about statements returning rows 
      has been removed [ticket:1212].
      
    - Further simplified SELECT compilation and its relationship to
      result row processing.

    - Direct execution of a union() construct will properly set up
      result-row processing. [ticket:1194]

    - The internal notion of an "OID" or "ROWID" column has been
      removed.  It's basically not used by any dialect, and the
      possibility of its usage with psycopg2's cursor.lastrowid is
      basically gone now that INSERT..RETURNING is available.

    - Removed "default_order_by()" method on all FromClause objects.

    - Slightly changed behavior of IN operator for comparing to
      empty collections. Now results in inequality comparison
      against self. More portable, but breaks with stored procedures
      that aren't pure functions.

- oracle
    - Removed FIRST_ROWS() optimize flag when using LIMIT/OFFSET,
      can be reenabled with optimize_limits=True create_engine()
      flag.  [ticket:536]

    - Wrote a docstring for Oracle dialect.  Apparently that Ohloh
      "few source code comments" label is starting to sting :).

    - Setting the auto_convert_lobs to False on create_engine() will
      also instruct the OracleBinary type to return the cx_oracle
      LOB object unchanged.

- mysql
    - Fixed foreign key reflection in the edge case where a Table's
      explicit schema= is the same as the schema (database) the
      connection is attached to.

    - No longer expects include_columns in table reflection to be
      lower case.

- misc
    - util.flatten_iterator() func doesn't interpret strings with